Daquiz, Mark Angelo
RESUME

--- a/index.html
+++ b/index.html
@@ -1,53 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Your Resume</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Your Name - Resume</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f4f4f4;
+    }
+
+    header {
+      background-color: #333;
+      color: #fff;
+      text-align: center;
+      padding: 1em 0;
+    }
+
+    section {
+      max-width: 800px;
+      margin: 2em auto;
+      background-color: #fff;
+      padding: 1em;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      border-radius: 5px;
+    }
+
+    img {
+      max-width: 100%;
+      height: auto;
+      border-radius: 50%;
+    }
+
+    h1, h2, h3 {
+      color: #333;
+    }
+
+    p {
+      margin: 0.5em 0;
+    }
+  </style>
 </head>
 <body>
-    <header>
-        <h1>Your Name</h1>
-        <p>Web Developer</p>
-    </header>
 
-    <section class="contact">
-        <h2>Contact Information</h2>
-        <p>Email: your@email.com</p>
-        <p>Phone: (123) 456-7890</p>
-        <p>LinkedIn: linkedin.com/in/yourprofile</p>
-        <!-- Add more contact details as needed -->
-    </section>
+  <header>
+    <h1>Your Name</h1>
+    <p>Web Developer</p>
+  </header>
 
-    <section class="education">
-        <h2>Education</h2>
-        <p>Degree in Computer Science</p>
-        <p>University Name, Graduation Year</p>
-    </section>
+  <section>
+    <img src="path/to/your/picture.jpg" alt="Your Name">
+    <h2>Contact Information</h2>
+    <p>Email: your.email@example.com</p>
+    <p>Phone: (123) 456-7890</p>
 
-    <section class="experience">
-        <h2>Work Experience</h2>
-        <p>Job Title - Company Name (Date Range)</p>
-        <p>Responsibilities and achievements...</p>
-        <!-- Add more work experience details as needed -->
-    </section>
+    <h2>Education</h2>
+    <p>Degree in Computer Science - University Name (Year)</p>
 
-    <section class="skills">
-        <h2>Skills</h2>
-        <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JavaScript</li>
-            <li>JSON</li>
-            <!-- Add more skills as needed -->
-        </ul>
-    </section>
+    <h2>Skills</h2>
+    <p>HTML, CSS, JavaScript, React, etc.</p>
 
-    <!-- Add more sections such as projects, certifications, etc. -->
+    <h2>Experience</h2>
+    <p>Web Developer - Company Name (Year - Present)</p>
 
-    <footer>
-        <p>Updated: January 16, 2024</p>
-    </footer>
+    <!-- Add more sections as needed -->
+
+  </section>
+
 </body>
 </html>
