Daquiz, Mark Angelo
MODIFIED PROFILE NAME

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   </header>
 
   <section>
-    <img src="path/to/your/picture.jpg" alt="Your Name">
+    <img src="Profile.png" alt="Mark Angelo C. Daquiz">
     <h2>Contact Information</h2>
     <p>Email: your.email@example.com</p>
     <p>Phone: (123) 456-7890</p>
